spring-cloud-k8s/user/k8s/privileges.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
