spring-cloud-k8s/user/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/user(/|$)(.*)"
            backend:
              service:
                name: user
                port:
                  number: 8080
          - pathType: Prefix
            path: "/order(/|$)(.*)"
            backend:
              service:
                name: order
                port:
                  number: 8080
